--- a/ncert-maths/contour_integration.tex
+++ b/ncert-maths/contour_integration.tex
@@ -89,4 +89,9 @@ multiples of 5.\\
 \solution
 \pagebreak
 
+
+\item Find the sum of odd integers from 1 to 2001.
+\solution
+\pagebreak
+
 \end{enumerate}
